--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Delicious - v2.1.0
-  * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -226,7 +220,7 @@
       </div>
     </section><!-- End Whu Us Section -->
 
-    <!-- ======= Menu Section ======= -->
+    <!-- ======= Avenues Section ======= -->
     <section id="avenues" class="avenues">
       <div class="container">
 
@@ -245,7 +239,7 @@
           </div>
         </div> -->
 
-        <div class="row menu-container">
+        <div class="row avenue-container">
 
           <div class="col-lg-6 menu-item filter-starters">
             <div class="menu-content">
@@ -439,7 +433,7 @@
         </div>
 
       </div>
-    </section><!-- End Specials Section -->
+    </section><!-- End Ingenio Section -->
 
     <!-- ======= Events Section ======= -->
     <section id="events" class="events">
@@ -453,42 +447,48 @@
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/saharsh.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/essaywriting.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Saharsh - Zonal Rotaract Conference</h3>
+              <h3>My tribute to the nation</h3>
               <div class="price">
-                <p><strong>Event date:</strong><span> 21st February, 2021</span></p>
+                <p><strong>Event date:</strong><span> 23rd-25th February, 2021</span></p>
               </div>
               <br>
               <p class="font-italic">
-                The wait is finally over, we've opened the registrations for Saharsh, the zonal conference 
-Just few more days to one of the greatest days for zone-1, do not miss this wonderful opportunity to get connected with everyone after such a long gap. 
-Here's a glimpse of what all you'll experience at Saharsh,
+                " Ask not what your country can do for you; ask what you can do for your country "<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;― John F. Kennedy 
               </p>
-              <ul>
+              <!-- <ul>
                 <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
                 <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
                 <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
-              </ul>
+              </ul> -->
               <p>
-                <strong>Registration fee</strong>: 200/-
+                Being a citizen of a country is taking responsibilities. Every good citizen adds to the strength of the nation. But have you ever thought of what you have done to the nation? 
+Each one of us might have done something in return to the nation, be it small or big, everything makes difference. We do have many ideas for the development of this nation. 
+<br><br>
+We, the Rotaract club of GITAM, is back with an activity, " My tribute to the nation". This essay writing competition gives you a chance to test your writing skills and express your feelings. Take the opportunity and write about your contribution to our nation in no more than 350 words.
+              </p>
+              <p>
+                <!-- <strong>Registration fee</strong>: 200/-
                 <br>
                 <strong>Mode of Payment:</strong>
                 <br>
                 Google pay/Phonepe/Paytm: 8500618279<br>
-                <strong>Name:</strong> Harshitha Kosaraju
+                <strong>Name:</strong> Harshitha Kosaraju 
                 <strong>Time:</strong> 9:00 AM - 5:00 PM<br>
                 <strong>Venue:</strong> Quality Inn Bez Krishna<br>
-                <br>
+                <br>-->
                 Don't miss this opportunity
                 <br><br>
-                <a href="https://forms.gle/xuMyjNFqoxcFazW37" target="blank">Click here</a> to register.
+                <a href="https://forms.gle/C28vwoRnps45isu4A" target="blank">Click here</a> to register.<br>
+                Mail your entries to: <strong>racgitameditorial@gmail.com</strong>
               </p>
             </div>
           </div>
 
-          <div class="row event-item">
+          <!-- <div class="row event-item">
             <div class="col-lg-6">
               <img src="assets/img/saharsh-2.jpeg" class="img-fluid" alt="">
             </div>
@@ -523,7 +523,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
                 <a href="https://forms.gle/xuMyjNFqoxcFazW37" target="blank">Click here</a> to register.
               </p>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="row event-item">
             <div class="col-lg-6">
@@ -687,8 +687,8 @@ Here's a glimpse of what all you'll experience at Saharsh,
       </div>
     </section><!-- End Gallery Section -->
 
-<!-- ======= Chefs Section ======= -->
-<section id="chefs" class="chefs">
+<!-- ======= Board Section ======= -->
+<section id="board" class="board">
   <div class="container">
 
     <!-- <div class="section-title">
@@ -702,7 +702,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
 
       <div class=" col-md-6">
         <div class="member" id="pic">
-          <div class="pic"><img src="assets/img/chefs/chefs-2.jpg" class="img-fluid" alt="" style="width: 450px;height: 450px;"></div>
+          <div class="pic"><img src="assets/img/board/president.jpg" class="img-fluid" alt="" style="width: 450px;height: 450px;"></div>
           <div class="member-info" id="desc">
             <h4>Gopala krishna Chimata</h4>
             <span>President</span>
@@ -718,7 +718,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
 
       <div class=" col-md-6">
         <div class="member" id="pic">
-          <div class="pic"><img src="assets/img/chefs/chefs-3.jpg" class="img-fluid" alt="" style="width: 377px;height: 450px;"></div>
+          <div class="pic"><img src="assets/img/board/facultyadvisor.jpg" class="img-fluid" alt="" style="width: 377px;height: 450px;"></div>
           <div class="member-info" id="desc" style="height: 138px;">
             <h4>N.V.L.Murali Krishna</h4>
             <span>Faculty Advisor</span>
@@ -735,18 +735,18 @@ Here's a glimpse of what all you'll experience at Saharsh,
     </div>
 
   </div>
-</section><!-- End Chefs Section -->
+</section><!-- End board Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Alumni Section ======= -->
     <h3 class="alumni-head">Our Proud <span>Alumni</span></h3>
-    <section id="testimonials" class="testimonials">
+    <section id="alumni" class="alumni">
       <div class="container">
 
         <div class="owl-carousel testimonials-carousel">
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/P Sai Bhavana.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/P Sai Bhavana.jpeg" class="alumni-img" alt="Sai Bhavana">
               <h3>P Sai Bhavana<h3>
               <h4>Cluster Manager, PhonePe</h4>
               <div class="stars">
@@ -758,7 +758,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/Kavya.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Kavya.jpeg" class="alumni-img" alt="Kavya">
               <h3>Kavya Tirumalaraju</h3>
               <h4></h4>
               <div class="stars">
@@ -776,9 +776,9 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </p> -->
           </div>
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/Aishwarya Chitta.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Aishwarya Chitta.jpeg" class="alumni-img" alt="Aishwarya Chitta">
               <h3>Aishwarya Chitta<h3>
               <h4>Data Science and Analytics professional, Truist Inc.,</h4>
               <div class="stars">
@@ -790,7 +790,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/Chaitanya Dadhichi.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Chaitanya Dadhichi.jpeg" class="alumni-img" alt="Chaitanya Dadhichi">
               <h3>Chaitanya Dadichi<h3>
               <h4>Business Consultant, ZS Associates</h4>
               <div class="stars">
@@ -808,9 +808,9 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </p> -->
           </div>
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/Devaraj.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Devaraj.jpeg" class="alumni-img" alt="Devaraj">
               <h3>Devraj Sakhalabhaktula</h3>
               <h4>Technical Lead - Enterprise Monitoring, Cotiviti</h4>
               <div class="stars">
@@ -822,7 +822,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/Nitin Chinta.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Nitin Chinta.jpeg" class="alumni-img" alt="Nitin Chinta">
               <h3>Nitin Chinta</h3>
               <h4>Regional Manager, Andhra & Telangana</h4>
               <div class="stars">
@@ -842,9 +842,9 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </p> -->
           </div>
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/Deepanjan Joshi.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Deepanjan Joshi.jpeg" class="alumni-img" alt="Deepanjan Joshi">
               <h3>Dr. Deepanjan Ghosh</h3>
               <h4>Co-Founder, G2B Biologists PVT LTD</h4>
               <div class="stars">
@@ -856,7 +856,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/Kishen Jayanti.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Kishen Jayanti.jpeg" class="alumni-img" alt="Kishen Jayanti">
               <h3>Kishen Jayanti</h3>
               <h4>Senior Manager in Marketing Analytics, The Home Depot.</h4>
               <div class="stars">
@@ -874,9 +874,9 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </p> -->
           </div>
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/Anirudh.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Anirudh.jpeg" class="alumni-img" alt="Anirudh">
               <h3>Anirudh</h3>
               <h4>Transport Engineer, GHD</h4>
               <div class="stars">
@@ -888,7 +888,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/Vidya Attivali.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Vidya Attivali.jpeg" class="alumni-img" alt="Vidya Attivali">
               <h3>Vidya Attivali</h3>
               <h4>Senior Developer, Target</h4>
               <div class="stars">
@@ -906,9 +906,9 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </p> -->
           </div>
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/Deeksha.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Deeksha.jpeg" class="alumni-img" alt="Deeksha">
               <h3>Deeksha</h3>
               <h4>Project Manager, Discover Financial Services</h4>
               <div class="stars">
@@ -920,7 +920,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/Avinash.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Avinash.jpeg" class="alumni-img" alt="Avinash">
               <h3>Avinash Gidugu</h3>
               <h4>Advisory Consultant, Deloitte</h4>
               <div class="stars">
@@ -938,9 +938,9 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </p> -->
           </div>
 
-          <div class="testimonial-item">
+          <div class="alumni-item">
             <div class="alumni">
-              <img src="assets/img/Alumni/Deepti Dama.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/Deepti Dama.jpeg" class="alumni-img" alt="Deepti Dama">
               <h3>Deepti Dama</h3>
               <h4>Trainee, Dr. Reddy's Laboratory</h4>
               <div class="stars">
@@ -952,7 +952,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
               </div>
             </div>
             <div class="alumni d-none d-md-block">
-              <img src="assets/img/Alumni/sumit.jpeg" class="testimonial-img" alt="">
+              <img src="assets/img/Alumni/sumit.jpeg" class="alumni-img" alt="Sumit Agarwal">
               <h3>Sumit Agarwal</h3>
               <h4>Business Man</h4>
               <div class="stars">
@@ -974,7 +974,7 @@ Here's a glimpse of what all you'll experience at Saharsh,
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section><!-- End Alumni Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
