--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="carousel-inner" role="listbox">
 
           <!-- Slide 1 -->
-          <div class="carousel-item active" style="background: url(assets/img/slide/abhyas.jpeg);">
+          <div class="carousel-item active" style="background: url(assets/img/slide/installation.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2 class="animate__animated animate__fadeInDown">Rotaract Club of <span>GITAM</span></h2>
@@ -109,7 +109,7 @@
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/GBM.jpeg);">
+          <div class="carousel-item" style="background: url(assets/img/slide/group.jpg);">
             <!-- <div class="carousel-background"><img src="assets/img/slide/flashmob.jpg" alt=""></div> -->
             <div class="carousel-container">
               <div class="carousel-content">
