--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
 
           <!-- Slide 3 -->
-          <div class="carousel-item" style="background: url(assets/img/slide/group.jpg);">
+          <div class="carousel-item" style="background: url(assets/img/slide/installation-3.jpeg);">
             <!-- <div class="carousel-background"><img src="assets/img/slide/flashmob.jpg" alt=""></div> -->
             <div class="carousel-container">
               <div class="carousel-content">
@@ -440,50 +440,28 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Current<span> Events</span></h2>
+          <!-- <h2>Current<span> Events</span></h2> -->
         </div>
 
         <div class="owl-carousel events-carousel">
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/essaywriting.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/bestrotaractorsFeb.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>My tribute to the nation</h3>
+              <h3>Best Rotaractors of the Month</h3>
               <div class="price">
-                <p><strong>Event date:</strong><span> 23rd-25th February, 2021</span></p>
+                <!-- <p><strong>Event date:</strong><span> 23rd-25th February, 2021</span></p> -->
               </div>
               <br>
               <p class="font-italic">
-                " Ask not what your country can do for you; ask what you can do for your country "<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;― John F. Kennedy 
+                Rotaract Club of GITAM is delighted to announce the Active Rotaractors of the Month. The names are selected by considering the overall performance of the Rotaractor.
               </p>
-              <!-- <ul>
-                <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
-                <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
-                <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
-              </ul> -->
               <p>
-                Being a citizen of a country is taking responsibilities. Every good citizen adds to the strength of the nation. But have you ever thought of what you have done to the nation? 
-Each one of us might have done something in return to the nation, be it small or big, everything makes difference. We do have many ideas for the development of this nation. 
+                This is not the end, you still have a chance to be on the list. Your activeness and contribution towards the club, helps you in climbing on to the list.
 <br><br>
-We, the Rotaract club of GITAM, is back with an activity, " My tribute to the nation". This essay writing competition gives you a chance to test your writing skills and express your feelings. Take the opportunity and write about your contribution to our nation in no more than 350 words.
-              </p>
-              <p>
-                <!-- <strong>Registration fee</strong>: 200/-
-                <br>
-                <strong>Mode of Payment:</strong>
-                <br>
-                Google pay/Phonepe/Paytm: 8500618279<br>
-                <strong>Name:</strong> Harshitha Kosaraju 
-                <strong>Time:</strong> 9:00 AM - 5:00 PM<br>
-                <strong>Venue:</strong> Quality Inn Bez Krishna<br>
-                <br>-->
-                Don't miss this opportunity
-                <br><br>
-                <a href="https://forms.gle/C28vwoRnps45isu4A" target="blank">Click here</a> to register.<br>
-                Mail your entries to: <strong>racgitameditorial@gmail.com</strong>
+<i>Every Month, Active Rotaractors will be announced.</i>
               </p>
             </div>
           </div>
@@ -652,8 +630,11 @@ Here's a glimpse of what all you'll experience at Saharsh,
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/writtentest.jpeg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/writtentest.jpeg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/GBM.jpeg" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/GBM.jpeg" alt="" class="img-fluid">
+              </a>
+              <a href="assets/img/gallery/alumniconnect.jpg" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/alumniconnect.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -823,8 +804,8 @@ Here's a glimpse of what all you'll experience at Saharsh,
             </div>
             <div class="alumni d-none d-md-block">
               <img src="assets/img/Alumni/Nitin Chinta.jpeg" class="alumni-img" alt="Nitin Chinta">
-              <h3>Nitin Chinta</h3>
-              <h4>Regional Manager, Andhra & Telangana</h4>
+              <h3>Nitin Sai Chinta</h3>
+              <h4>Regional Manager - Pidilite Industries</h4>
               <div class="stars">
                 <i class="icofont-star"></i>
                 <i class="icofont-star"></i>
