--- a/youth.html
+++ b/youth.html
@@ -102,6 +102,38 @@
     </section> -->
     <div class="row event-item event">
       <div class="col-lg-6">
+        <img src="assets/img/youth/mytribute.jpeg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>My tribute to the Nation</h3>
+        <div class="price">
+          <p><strong>Event date:</strong><span> 23-25th February, 2021</span></p>
+        </div>
+        <br>
+        <p class="font-italic">
+          " Ask not what your country can do for you; ask what you can do for your country "<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;― John F. Kennedy
+        </p>
+        <p>
+          Being a citizen of a country is taking responsibilities. Every good citizen adds to the strength of the nation. But have you ever thought of what you have done to the nation? 
+Each one of us might have done something in return to the nation, be it small or big, everything makes difference. We do have many ideas for the development of this nation.
+          <br>
+          <br>
+          We, the Rotaract club of GITAM, is back with an activity, " My tribute to the nation". This essay writing competition gives you a chance to test your writing skills and express your feelings. Take the opportunity and write about your contribution to our nation in no more than 350 words.
+          <br>
+          <br>
+          <strong>The winners of the competition are:</strong>
+          <ol>
+            <li>Rtr P Bhuvan Deepak</li>
+            <li>Rtr Shrutika Surada</li>
+            <li>Rtr Sri Vidya</li>
+          </ol>
+        </p>
+      </div>
+    </div>
+
+    <div class="row event-item event">
+      <div class="col-lg-6">
         <img src="assets/img/youth/Alumni-connect.jpeg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
