--- a/index.html
+++ b/index.html
@@ -447,6 +447,44 @@
 
           <div class="row event-item">
             <div class="col-lg-6">
+              <img src="assets/img/aatmraksh.jpeg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content">
+              <h3>Aatmraksh</h3>
+              <div class="price">
+                <p><strong>Event date:</strong><span> 8th February, 2021</span><br>
+                <strong>Venue:</strong> Dr. B R Ambedkar Auditorium, Cotton Bhavan<br>
+                <strong>Time: </strong>4:00-5:00 PM<br>
+                </p>
+              </div>
+              <br>
+              <p class="font-italic">
+                "Self Defence is not just a set of techniques; it's a state of mind, and it begins with the belief that you are worth defending." 
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Rorion Gracie
+              <!-- <ul>
+                <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
+                <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
+                <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
+              </ul> -->
+              <p>
+                Self-defence is highly crucial in danger and intimidating situations to avoid you from being shaken and froze. It gives you confidence and knowledge to back yourself in an unfavourable scenario. 
+ Self Defence makes you learn techniques to protect yourself, build confidence, develop self-discipline, improve your physical conditioning, and teach you self-respect.
+ <br><br>
+ Rotaract Club of GITAM , in association with the Women Empowerment Cell of GITAM, presents 
+         <strong>"AATMRAKSH"</strong>
+-A self-Defence workshop for Women. 
+</p>
+
+              </p>
+                Don't miss this opportunity
+                <br><br>
+                <a href="https://forms.gle/BWisByAQWkAdPJyb6" target="blank">Click here</a> to register.
+              </p>
+            </div>
+          </div>
+
+          <div class="row event-item">
+            <div class="col-lg-6">
               <img src="assets/img/bestrotaractorsFeb.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
@@ -466,42 +504,7 @@
             </div>
           </div>
 
-          <!-- <div class="row event-item">
-            <div class="col-lg-6">
-              <img src="assets/img/saharsh-2.jpeg" class="img-fluid" alt="">
-            </div>
-            <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Saharsh - Zonal Rotaract Conference</h3>
-              <div class="price">
-                <p><strong>Event date:</strong><span> 21st February, 2021</span></p>
-              </div>
-              <br>
-              <p class="font-italic">
-                The wait is finally over, we've opened the registrations for Saharsh, the zonal conference 
-Just few more days to one of the greatest days for zone-1, do not miss this wonderful opportunity to get connected with everyone after such a long gap. 
-Here's a glimpse of what all you'll experience at Saharsh,
-              </p>
-              <ul>
-                <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
-                <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
-                <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
-              </ul>
-              <p>
-                <strong>Registration fee</strong>: 200/-
-                <br>
-                <strong>Mode of Payment:</strong>
-                <br>
-                Google pay/Phonepe/Paytm: 8500618279<br>
-                <strong>Name:</strong> Harshitha Kosaraju
-                <strong>Time:</strong> 9:00 AM - 5:00 PM<br>
-                <strong>Venue:</strong> Quality Inn Bez Krishna<br>
-                <br>
-                Don't miss this opportunity
-                <br><br>
-                <a href="https://forms.gle/xuMyjNFqoxcFazW37" target="blank">Click here</a> to register.
-              </p>
-            </div>
-          </div> -->
+          
 
           <!-- <div class="row event-item">
             <div class="col-lg-6">
