--- a/index.html
+++ b/index.html
@@ -447,38 +447,84 @@
 
           <div class="row event-item">
             <div class="col-lg-6">
-              <img src="assets/img/aatmraksh.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/innovativerotaractors.jpeg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content">
-              <h3>Aatmraksh</h3>
+              <h3>Innovative Rotaractors</h3>
               <div class="price">
-                <p><strong>Event date:</strong><span> 8th February, 2021</span><br>
-                <strong>Venue:</strong> Dr. B R Ambedkar Auditorium, Cotton Bhavan<br>
-                <strong>Time: </strong>4:00-5:00 PM<br>
+                <p><strong>Event deadline:</strong><span> 31st March, 2021</span><br>
+                <!-- <strong>Venue:</strong> Dr. B R Ambedkar Auditorium, Cotton Bhavan<br>
+                <strong>Time: </strong>4:00-5:00 PM<br> -->
                 </p>
               </div>
               <br>
               <p class="font-italic">
-                "Self Defence is not just a set of techniques; it's a state of mind, and it begins with the belief that you are worth defending." 
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Rorion Gracie
+                "Creativity is thinking up new things; Innovation is doing new things."
+<br>
               <!-- <ul>
                 <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
                 <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
                 <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
               </ul> -->
               <p>
-                Self-defence is highly crucial in danger and intimidating situations to avoid you from being shaken and froze. It gives you confidence and knowledge to back yourself in an unfavourable scenario. 
- Self Defence makes you learn techniques to protect yourself, build confidence, develop self-discipline, improve your physical conditioning, and teach you self-respect.
+                From smart wearables to self-driving cars, The world is changing with astonishing speed, and the change is possible because of Innovation. The world needs Innovation that we can create.<br><br>
+                Innovation is the process of giving life to your imagination. Be it small or big; It is something that we could do by going beyond the limits. 
  <br><br>
- Rotaract Club of GITAM , in association with the Women Empowerment Cell of GITAM, presents 
-         <strong>"AATMRAKSH"</strong>
--A self-Defence workshop for Women. 
-</p>
+ Rotaract Club of GITAM is back with a project,<br>
 
+   <strong>" Innovative Rotaractors "</strong>
+
+- Think different to make a difference. A chance to give life to your Innovation. 
+</p>
+<p>
+  <strong>What should I do?</strong> 
+Create an abstract of your idea(doc or pdf preferably) and submit it clicking the button below.
+</p>
+<p>
+  <strong>Note</strong>: The idea can be related to technical or non technical but it has to be useful for the society or the students. Best ideas will be implemented(if applicable) on further Discussion. 
+</p>
               </p>
                 Don't miss this opportunity
                 <br><br>
-                <a href="https://forms.gle/BWisByAQWkAdPJyb6" target="blank">Click here</a> to register.
+                <!-- <button><a href="https://forms.gle/Yz3sKsRj358caSzZA" target="blank">Click here</a> to register.</button> -->
+                <a href="https://forms.gle/Yz3sKsRj358caSzZA" class="btn-menu animate__animated animate__fadeInUp scrollto" target="blank">Submit your response</a>
+              </p>
+            </div>
+          </div>
+          
+          <div class="row event-item">
+            <div class="col-lg-6">
+              <img src="assets/img/tagafrnd.jpeg" class="img-fluid" alt="">
+            </div>
+            <div class="col-lg-6 pt-4 pt-lg-0 content">
+              <h3>Tag a Friend</h3>
+              <div class="price">
+                <!-- <p><strong>Event deadline:</strong><span> 31st March, 2021</span><br> -->
+                <!-- <strong>Venue:</strong> Dr. B R Ambedkar Auditorium, Cotton Bhavan<br>
+                <strong>Time: </strong>4:00-5:00 PM<br> -->
+                </p>
+              </div>
+              <br>
+              <p class="font-italic">
+<br>
+              <!-- <ul>
+                <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
+                <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
+                <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
+              </ul> -->
+              <p>
+                It is because of our friends that we could create many memorable moments in our life.  They are the ones who make us laugh, and hold our hand when we are sad. 
+
+ <br><br>
+ Rotaract Club of GITAM is back with an activity 
+
+         <strong>" Tag your friend "</strong>
+
+In the Comment box, tell when was the first time you met him/her. Bring your happiest memories back! 
+      
+                <br><br>
+                <!-- <button><a href="https://forms.gle/Yz3sKsRj358caSzZA" target="blank">Click here</a> to register.</button> -->
+                <a href="https://www.instagram.com/p/CMQ5KZGrY-A/?igshid=1xshk1eomydzj" target="_blank">Click here</a> to see the post
               </p>
             </div>
           </div>
