--- a/community.html
+++ b/community.html
@@ -103,6 +103,38 @@
     </section> -->
     <div class="row event-item event">
       <div class="col-lg-6">
+        <img src="assets/img/community/aatmraksh.jpeg" class="img-fluid" alt="">
+      </div>
+      <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
+        <h3>Aatmraksh</h3>
+        <div class="price">
+          <p><strong>Event date:</strong><span> 8th February, 2021</span><br>
+          <strong>Venue:</strong> Dr. B R Ambedkar Auditorium, Cotton Bhavan<br>
+          <strong>Time: </strong>4:00-5:00 PM<br>
+          </p>
+        </div>
+        <br>
+        <p class="font-italic">
+          "Self Defence is not just a set of techniques; it's a state of mind, and it begins with the belief that you are worth defending." 
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Rorion Gracie
+        <!-- <ul>
+          <li><i class="icofont-check-circled"></i> Joint Installation of three clubs</li>
+          <li><i class="icofont-check-circled"></i> Interactive sessions with leaders of RID 3020</li>
+          <li><i class="icofont-check-circled"></i> Games and Fun activities.</li>
+        </ul> -->
+        <p>
+          Self-defence is highly crucial in danger and intimidating situations to avoid you from being shaken and froze. It gives you confidence and knowledge to back yourself in an unfavourable scenario. 
+Self Defence makes you learn techniques to protect yourself, build confidence, develop self-discipline, improve your physical conditioning, and teach you self-respect.
+<br><br>
+Rotaract Club of GITAM , in association with the Women Empowerment Cell of GITAM, presents 
+   <strong>"AATMRAKSH"</strong>
+-A self-Defence workshop for Women. 
+        </p>
+      </div>
+    </div>
+
+    <div class="row event-item event">
+      <div class="col-lg-6">
         <img src="assets/img/community/polio.jpg" class="img-fluid" alt="">
       </div>
       <div class="col-lg-6 pt-4 pt-lg-0 content event-description">
